added a bunch of projects

--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
               <a class="contact-button" id="project-1-link" href="https://connorhill-rockpaperscissors.netlify.app/">Live Link</a>
             </div>
           </div>
+          <!-- next project -->
           <div class="project-5-container">
             <div class="project5-left">
               <p class="p5p">project 4 pic</p>
@@ -127,6 +128,161 @@
               <a class="contact-button" id="project-1-link" href="https://meruemmoon.netlify.app/#GuessTheFlag">Learn More</a>
             </div>
           </div>
+          <!-- end of project -->
+           <!-- next project -->
+          <div class="project-6-container">
+            <div class="project6-left">
+              <p class="p6p">project 5 pic</p>
+            </div>
+            <div class="project6-right">
+              <h2 id="about3">WordScramble</h2>
+              <h2 id="about2">A SwiftUI project in which you match flags to country names in a fun quiz format.</h2>
+              <a class="contact-button" id="project-1-link" href="https://meruemmoon.netlify.app/#WordScramble">Learn More</a>
+            </div>
+          </div>
+          <!-- end of project -->
+           <!-- next project -->
+          <div class="project-7-container">
+            <div class="project7-left">
+              <p class="p7p">project 6 pic</p>
+            </div>
+            <div class="project7-right">
+              <h2 id="about3">BucketList</h2>
+              <h2 id="about2">A SwiftUI app that lets you add personal markers on Apple Maps to bookmark places you want to visit.</h2>
+              <!-- key feature: secure user authentication to access the app, mapkit, customizable location markers -->
+               <!-- tools used: mvvm, mapkit, map api -->
+              <a class="contact-button" id="project-1-link" href="https://meruemmoon.netlify.app/#BucketList">Learn More</a>
+            </div>
+          </div>
+          <!-- end of project -->
+            <!-- next project -->
+          <div class="project-8-container">
+            <div class="project8-left">
+              <p class="p5p">Project 7 pic</p>
+            </div>
+            <div class="project8-right">
+              <h2 id="about3">HabitTracker</h2>
+              <h2 id="about2">SwiftUI app for habit tracking that helps you set and monitor goals</h2>
+              <a class="contact-button" id="project-1-link" href="https://meruemmoon.netlify.app/#HabitTracker">Learn More</a>
+            </div>
+          </div>
+          <!-- end of project -->
+           <!-- next project -->
+          <div class="project-9-container">
+            <div class="project9-left">
+              <p class="p9p">project 8 pic</p>
+            </div>
+            <div class="project9-right">
+              <h2 id="about3">InstaFilter</h2>
+              <h2 id="about2">A SwiftUI project in which you match flags to country names in a fun quiz format.</h2>
+              <a class="contact-button" id="project-1-link" href="https://meruemmoon.netlify.app/#InstaFilter">Learn More</a>
+            </div>
+          </div>
+          <!-- end of project -->
+           <!-- next project -->
+          <div class="project-10-container">
+            <div class="project10-left">
+              <p class="p10p">project 9 pic</p>
+            </div>
+            <div class="project10-right">
+              <h2 id="about3">X's and O's</h2>
+              <h2 id="about2">SwiftUI app that lets you play classic Tic Tac Toe against a friend or the computer with simple, intuitive controls and a clean interface</h2>
+              <!-- key features: play against a fiend or the computer, play against a friend locally, nice clean ui and customizable names for players -->
+               <!-- tools used: multipeer connectivity, -->
+              <a class="contact-button" id="project-1-link" href="https://meruemmoon.netlify.app/#X'sandO's">Learn More</a>
+            </div>
+          </div>
+          <!-- end of project -->
+            <!-- next project -->
+          <div class="project-11-container">
+            <div class="project11-left">
+              <p class="p11p">project 10 pic</p>
+            </div>
+            <div class="project11-right">
+              <h2 id="about3">ToDoList</h2>
+              <h2 id="about2">A SwiftUI project in which you match flags to country names in a fun quiz format.</h2>
+              <!-- key features: user login and account creation,  -->
+               <!-- tools used: FireBase auth, firebase -->
+              <a class="contact-button" id="project-1-link" href="https://meruemmoon.netlify.app/#ToDoList">Learn More</a>
+            </div>
+          </div>
+          <!-- end of project -->
+           <!-- next project -->
+          <div class="project-12-container">
+            <div class="project12-left">
+              <p class="p12p">project 11 pic</p>
+            </div>
+            <div class="project12-right">
+              <h2 id="about3">Flashzilla</h2>
+              <h2 id="about2">A SwiftUI app designed for learning with flashcards, allowing you to create, organize, and study personalized decks of digital flashcards on your device.</h2>
+              <!-- key features: customizable flashcards, prompts and answers, custom flashcards and timed excercise. -->
+              <a class="contact-button" id="project-1-link" href="https://meruemmoon.netlify.app/#Flashzilla">Learn More</a>
+            </div>
+          </div>
+          <!-- end of project -->
+           <!-- next project -->
+          <div class="project-13-container">
+            <div class="project13-left">
+              <p class="p13p">project 12 pic</p>
+            </div>
+            <div class="project13-right">
+              <h2 id="about3">iExpense</h2>
+              <h2 id="about2">A SwiftUI app for managing personal and business expenses, enabling users to easily track, categorize, and analyze spending.</h2>
+              <!-- both personal AND business expenses can be accounted for -->
+              <a class="contact-button" id="project-1-link" href="https://meruemmoon.netlify.app/#iExpense">Learn More</a>
+            </div>
+          </div>
+          <!-- end of project -->
+            <!-- next project -->
+          <div class="project-14-container">
+            <div class="project14-left">
+              <p class="p14p">project 13 pic</p>
+            </div>
+            <div class="project14-right">
+              <h2 id="about3">CupcakeCorner</h2>
+              <h2 id="about2">A SwiftUI app for a cupcake store that allows customers to browse, order, and customize cupcakes from a variety of flavors.</h2>
+              <a class="contact-button" id="project-1-link" href="https://meruemmoon.netlify.app/#CupcakeCorner">Learn More</a>
+            </div>
+          </div>
+          <!-- end of project -->
+           <!-- next project -->
+          <div class="project-15-container">
+            <div class="project15-left">
+              <p class="p15p">project 14 pic</p>
+            </div>
+            <div class="project15-right">
+              <h2 id="about3">BetterRest</h2>
+              <h2 id="about2">A SwiftUI app utilizing machine learning to determine the optimal sleeping schedule for users based on their personalized data.</h2>
+              <!-- machine learning, notifies user when its time to sleep, save sleep for the user  -->
+               <!-- machine learning, notifications, alerts -->
+              <a class="contact-button" id="project-1-link" href="https://meruemmoon.netlify.app/#BetterRest">Learn More</a>
+            </div>
+          </div>
+          <!-- end of project -->
+           <!-- next project -->
+          <div class="project-16-container">
+            <div class="project16-left">
+              <p class="p16p">project 15 pic</p>
+            </div>
+            <div class="project16-right">
+              <h2 id="about3">WeSplit</h2>
+              <h2 id="about2">A SwiftUI app that calculates and divides tips and payments evenly among groups ranging from 2 to 100 people, ensuring fairness and ease in splitting bills at restaurants or events.</h2>
+              <a class="contact-button" id="project-1-link" href="https://meruemmoon.netlify.app/#WeSplit">Learn More</a>
+            </div>
+          </div>
+          <!-- end of project 1. tried to say that where and what were the same word 2. tried t osay you didnt talk when you obviosuly did, which I is why I said what in the first place 3. tried saying "I wish I could take a minute and talk" when I just said to take a minute and talk directly before that. 3 extremely poor arguments. Interesting. -->
+            <!-- next project -->
+          <div class="project-17-container">
+            <div class="project17-left">
+              <p class="p17p">project 16</p>
+            </div>
+            <div class="project17-right">
+              <h2 id="about3">WordScramble</h2>
+              <h2 id="about2">An app that challenges users to create words from a set of given letters, testing vocabulary and word-building skills.</h2>
+              <a class="contact-button" id="project-1-link" href="https://meruemmoon.netlify.app/#WordScramble">Learn More</a>
+            </div>
+          </div>
+          <!-- end of project -->
         </div>
       </section>
       <section id="contact" class="contact">
