editing those projects

--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
             </div>
             <div class="project16-right">
               <h2 id="about3">WeSplit</h2>
-              <h2 id="about2">A SwiftUI app that calculates and divides tips and payments evenly among groups ranging from 2 to 100 people, ensuring fairness and ease in splitting bills at restaurants or events.</h2>
+              <h2 id="about2">A SwiftUI app that calculates and divides tips and payments evenly among groups of people.</h2>
               <a class="contact-button" id="project-1-link" href="https://meruemmoon.netlify.app/#WeSplit">Learn More</a>
             </div>
           </div>
