--- a/index.html
+++ b/index.html
@@ -95,6 +95,10 @@
               <a class="contact-button" id="project-1-link" href="https://meruemmoon.netlify.app/#SnowSeeker">Learn More</a>
             </div>
           </div>
+          <!-- dividing bar  -->
+          <div>
+            <div class="paddingTop"></div>
+          </div>
           <div class="project-3-container">
             <div class="project3-left">
               <p class="p3p">project 2 pic</p>
@@ -106,6 +110,10 @@
               <a class="contact-button" id="project-1-link" href="https://meruemmoon.netlify.app/#GalaxyGuide">Learn More</a>
             </div>
           </div>
+          <!-- dividing bar  -->
+          <div>
+            <div class="paddingTop"></div>
+          </div>
           <div class="project-4-container">
             <div class="project4-left">
               <p class="p4p"></p>
@@ -116,6 +124,10 @@
               <h2 id="about2">A web application of a simple, classic game.</h2>
               <a class="contact-button" id="project-1-link" href="https://connorhill-rockpaperscissors.netlify.app/">Live Link</a>
             </div>
+          </div>
+          <!-- dividing bar  -->
+          <div>
+            <div class="paddingTop"></div>
           </div>
           <!-- next project -->
           <div class="project-5-container">
@@ -129,6 +141,10 @@
             </div>
           </div>
           <!-- end of project -->
+          <!-- dividing bar  -->
+          <div>
+            <div class="paddingTop"></div>
+          </div>
            <!-- next project -->
           <div class="project-6-container">
             <div class="project6-left">
@@ -141,7 +157,11 @@
             </div>
           </div>
           <!-- end of project -->
-           <!-- next project -->
+          <!-- dividing bar  -->
+          <div>
+            <div class="paddingTop"></div>
+          </div>
+          <!-- next project -->
           <div class="project-7-container">
             <div class="project7-left">
               <p class="p7p">project 6 pic</p>
@@ -155,7 +175,11 @@
             </div>
           </div>
           <!-- end of project -->
-            <!-- next project -->
+          <!-- dividing bar  -->
+          <div>
+            <div class="paddingTop"></div>
+          </div>
+          <!-- next project -->
           <div class="project-8-container">
             <div class="project8-left">
               <p class="p5p">Project 7 pic</p>
@@ -167,7 +191,11 @@
             </div>
           </div>
           <!-- end of project -->
-           <!-- next project -->
+          <!-- dividing bar  -->
+          <div>
+            <div class="paddingTop"></div>
+          </div>
+          <!-- next project -->
           <div class="project-9-container">
             <div class="project9-left">
               <p class="p9p">project 8 pic</p>
@@ -179,6 +207,10 @@
             </div>
           </div>
           <!-- end of project -->
+          <!-- dividing bar  -->
+          <div>
+            <div class="paddingTop"></div>
+          </div>
            <!-- next project -->
           <div class="project-10-container">
             <div class="project10-left">
@@ -193,7 +225,11 @@
             </div>
           </div>
           <!-- end of project -->
-            <!-- next project -->
+          <!-- dividing bar  -->
+          <div>
+            <div class="paddingTop"></div>
+          </div>
+          <!-- next project -->
           <div class="project-11-container">
             <div class="project11-left">
               <p class="p11p">project 10 pic</p>
@@ -207,7 +243,11 @@
             </div>
           </div>
           <!-- end of project -->
-           <!-- next project -->
+          <!-- dividing bar  -->
+          <div>
+            <div class="paddingTop"></div>
+          </div>
+          <!-- next project -->
           <div class="project-12-container">
             <div class="project12-left">
               <p class="p12p">project 11 pic</p>
@@ -220,7 +260,11 @@
             </div>
           </div>
           <!-- end of project -->
-           <!-- next project -->
+          <!-- dividing bar  -->
+          <div>
+            <div class="paddingTop"></div>
+          </div>
+          <!-- next project -->
           <div class="project-13-container">
             <div class="project13-left">
               <p class="p13p">project 12 pic</p>
@@ -233,7 +277,11 @@
             </div>
           </div>
           <!-- end of project -->
-            <!-- next project -->
+          <!-- dividing bar  -->
+          <div>
+            <div class="paddingTop"></div>
+          </div>
+          <!-- next project -->
           <div class="project-14-container">
             <div class="project14-left">
               <p class="p14p">project 13 pic</p>
@@ -245,7 +293,11 @@
             </div>
           </div>
           <!-- end of project -->
-           <!-- next project -->
+          <!-- dividing bar  -->
+          <div>
+            <div class="paddingTop"></div>
+          </div>
+          <!-- next project -->
           <div class="project-15-container">
             <div class="project15-left">
               <p class="p15p">project 14 pic</p>
@@ -259,7 +311,11 @@
             </div>
           </div>
           <!-- end of project -->
-           <!-- next project -->
+          <!-- dividing bar  -->
+          <div>
+            <div class="paddingTop"></div>
+          </div>
+          <!-- next project -->
           <div class="project-16-container">
             <div class="project16-left">
               <p class="p16p">project 15 pic</p>
@@ -271,7 +327,11 @@
             </div>
           </div>
           <!-- end of project 1. tried to say that where and what were the same word 2. tried t osay you didnt talk when you obviosuly did, which I is why I said what in the first place 3. tried saying "I wish I could take a minute and talk" when I just said to take a minute and talk directly before that. 3 extremely poor arguments. Interesting. -->
-            <!-- next project -->
+          <!-- dividing bar  -->
+          <div>
+            <div class="paddingTop"></div>
+          </div>
+          <!-- next project -->
           <div class="project-17-container">
             <div class="project17-left">
               <p class="p17p">project 16</p>
