--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
               <h2 id="about2">SwiftUI app that lets you play classic Tic Tac Toe against a friend or the computer with simple, intuitive controls and a clean interface</h2>
               <!-- key features: play against a fiend or the computer, play against a friend locally, nice clean ui and customizable names for players -->
                <!-- tools used: multipeer connectivity, -->
-              <a class="contact-button" id="project-1-link" href="https://meruemmoon.netlify.app/#X'sandO's">Learn More</a>
+              <a class="contact-button" id="project-1-link" href="https://meruemmoon.netlify.app/#X-sandO-s">Learn More</a>
             </div>
           </div>
           <!-- end of project -->
@@ -327,22 +327,7 @@
             </div>
           </div>
           <!-- end of project 1. tried to say that where and what were the same word 2. tried t osay you didnt talk when you obviosuly did, which I is why I said what in the first place 3. tried saying "I wish I could take a minute and talk" when I just said to take a minute and talk directly before that. 3 extremely poor arguments. Interesting. -->
-          <!-- dividing bar  -->
-          <div>
-            <div class="paddingTop"></div>
-          </div>
-          <!-- next project -->
-          <div class="project-17-container">
-            <div class="project17-left">
-              <p class="p17p">project 16</p>
-            </div>
-            <div class="project17-right">
-              <h2 id="about3">WordScramble</h2>
-              <h2 id="about2">An app that challenges users to create words from a set of given letters, testing vocabulary and word-building skills.</h2>
-              <a class="contact-button" id="project-1-link" href="https://meruemmoon.netlify.app/#WordScramble">Learn More</a>
-            </div>
-          </div>
-          <!-- end of project -->
+          <!-- end of project section -->
         </div>
       </section>
       <section id="contact" class="contact">
