--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
               <a class="contact-button" id="project-1-link" href="https://meruemmoon.netlify.app/#WeSplit">Learn More</a>
             </div>
           </div>
-          <!-- end of project 1. tried to say that where and what were the same word 2. tried t osay you didnt talk when you obviosuly did, which I is why I said what in the first place 3. tried saying "I wish I could take a minute and talk" when I just said to take a minute and talk directly before that. 3 extremely poor arguments. Interesting. -->
+          <!-- end of project -->
           <!-- end of project section -->
         </div>
       </section>
