--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
             </div>
             <div class="project6-right">
               <h2 id="about3">WordScramble</h2>
-              <h2 id="about2">A SwiftUI project in which you match flags to country names in a fun quiz format.</h2>
+              <h2 id="about2">A SwiftUI app that allows you to test your ability to create smaller words from a given word.</h2>
               <a class="contact-button" id="project-1-link" href="https://meruemmoon.netlify.app/#WordScramble">Learn More</a>
             </div>
           </div>
@@ -202,7 +202,7 @@
             </div>
             <div class="project9-right">
               <h2 id="about3">InstaFilter</h2>
-              <h2 id="about2">A SwiftUI project in which you match flags to country names in a fun quiz format.</h2>
+              <h2 id="about2">A SwiftUI project in which you can upload, edit and save photos with descriptions and more.</h2>
               <a class="contact-button" id="project-1-link" href="https://meruemmoon.netlify.app/#InstaFilter">Learn More</a>
             </div>
           </div>
@@ -218,7 +218,7 @@
             </div>
             <div class="project10-right">
               <h2 id="about3">X's and O's</h2>
-              <h2 id="about2">SwiftUI app that lets you play classic Tic Tac Toe against a friend or the computer with simple, intuitive controls and a clean interface</h2>
+              <h2 id="about2">SwiftUI app that lets you play classic Tic Tac Toe against a friend or the computer with simple, intuitive controls and a clean interface.</h2>
               <!-- key features: play against a fiend or the computer, play against a friend locally, nice clean ui and customizable names for players -->
                <!-- tools used: multipeer connectivity, -->
               <a class="contact-button" id="project-1-link" href="https://meruemmoon.netlify.app/#X-sandO-s">Learn More</a>
@@ -236,7 +236,7 @@
             </div>
             <div class="project11-right">
               <h2 id="about3">ToDoList</h2>
-              <h2 id="about2">A SwiftUI project in which you match flags to country names in a fun quiz format.</h2>
+              <h2 id="about2">An app of a classic to-do list that allows the user to create an account.</h2>
               <!-- key features: user login and account creation,  -->
                <!-- tools used: FireBase auth, firebase -->
               <a class="contact-button" id="project-1-link" href="https://meruemmoon.netlify.app/#ToDoList">Learn More</a>
