removed placeholder text for pic10

--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
            <!-- next project -->
           <div class="project-10-container">
             <div class="project10-left">
-              <p class="p10p">project 9 pic</p>
+              <p class="p10p"></p>
             </div>
             <div class="project10-right">
               <h2 id="about3">X's and O's</h2>
