--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
           <!-- next project -->
           <div class="project-9-container">
             <div class="project9-left">
-              <p class="p9p">project 8 pic</p>
+              <p class="p9p"></p>
             </div>
             <div class="project9-right">
               <h2 id="about3">InstaFilter</h2>
