--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
           <!-- next project -->
           <div class="project-11-container">
             <div class="project11-left">
-              <p class="p11p">project 10 pic</p>
+              <p class="p11p"></p>
             </div>
             <div class="project11-right">
               <h2 id="about3">ToDoList</h2>
