--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
           <!-- next project -->
           <div class="project-7-container">
             <div class="project7-left">
-              <p class="p7p">project 6 pic</p>
+              <p class="p7p"></p>
             </div>
             <div class="project7-right">
               <h2 id="about3">BucketList</h2>
