--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
           </div> -->
           <div class="project-2-container">
             <div class="project2-left">
-              <p class="p2p">project 1 pic</p>
+              <p class="p2p"></p>
             </div>
             <div class="project2-right">
               <h2 id="about3">SnowSeeker</h2>
