--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
           </div>
           <div class="project-3-container">
             <div class="project3-left">
-              <p class="p3p">project 2 pic</p>
+              <p class="p3p"></p>
             </div>
             <!-- any apollo mission emblem as pic -->
             <div class="project3-right">
