--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
           <!-- next project -->
           <div class="project-5-container">
             <div class="project5-left">
-              <p class="p5p">project 4 pic</p>
+              <p class="p5p"></p>
             </div>
             <div class="project5-right">
               <h2 id="about3">GuessTheFlag</h2>
