--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
           <!-- next project -->
           <div class="project-8-container">
             <div class="project8-left">
-              <p class="p5p">Project 7 pic</p>
+              <p class="p8p"></p>
             </div>
             <div class="project8-right">
               <h2 id="about3">HabitTracker</h2>
