--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
           <!-- next project -->
           <div class="project-14-container">
             <div class="project14-left">
-              <p class="p14p">project 13 pic</p>
+              <p class="p14p">/p>
             </div>
             <div class="project14-right">
               <h2 id="about3">CupcakeCorner</h2>
@@ -300,7 +300,7 @@
           <!-- next project -->
           <div class="project-15-container">
             <div class="project15-left">
-              <p class="p15p">project 14 pic</p>
+              <p class="p15p"></p>
             </div>
             <div class="project15-right">
               <h2 id="about3">BetterRest</h2>
@@ -318,7 +318,7 @@
           <!-- next project -->
           <div class="project-16-container">
             <div class="project16-left">
-              <p class="p16p">project 15 pic</p>
+              <p class="p16p"></p>
             </div>
             <div class="project16-right">
               <h2 id="about3">WeSplit</h2>
