--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
           <!-- next project -->
           <div class="project-12-container">
             <div class="project12-left">
-              <p class="p12p">project 11 pic</p>
+              <p class="p12p"></p>
             </div>
             <div class="project12-right">
               <h2 id="about3">Flashzilla</h2>
@@ -267,7 +267,7 @@
           <!-- next project -->
           <div class="project-13-container">
             <div class="project13-left">
-              <p class="p13p">project 12 pic</p>
+              <p class="p13p"></p>
             </div>
             <div class="project13-right">
               <h2 id="about3">iExpense</h2>
