--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
            <!-- next project -->
           <div class="project-6-container">
             <div class="project6-left">
-              <p class="p6p">project 5 pic</p>
+              <p class="p6p"></p>
             </div>
             <div class="project6-right">
               <h2 id="about3">WordScramble</h2>
