allowing mobile compat

--- a/index.html
+++ b/index.html
@@ -39,14 +39,14 @@
         <h2 id="about2">Here's a little more information about me, what I do, and my current skills regarding programming and technology</h2> 
         <div class="about-section">
           <div class="abouts">
-            <h2 id="about3">Here I am!</h2>
+            <h2 id="about3" class="about3">Here I am!</h2>
             <h2 id="about4">I'm an <strong>iOS and front end web developer</strong> building iOS apps and the front end of websites that lead to the success of the overall product. Check out some of my work in the <strong>projects</strong> section.</h2>
             <h2 id="about5">I also like sharing content related to the stuff that I have learned over the years in <strong>iOS and web development</strong> so it can help other people of the dev community. Feel free to connect or follow me on my LinkedIn where I post useful content related to iOS development, web development, and programming in general.</h2>
             <h2 id="about6">I'm open to <strong>job</strong> opportunities where I can contribute, learn, and grow. If you have a good opportunity that matches my skills and experience, then don't hesitate to <strong>contact</strong> me.</h2>   
             <a class="about-button" href="./#contact">Contact</a>
           </div>
           <div>
-            <h2 id="about3">My skills</h2>
+            <h2 id="about3" class="about3">My skills</h2>
             <div class="skills-container">
             <div class="skills">
               <div class="skills_skill">SwiftUI</div>
@@ -80,7 +80,7 @@
               <p class="p1p">project 1 pic</p>
             </div>
             <div class="project1-right">
-              <h2 id="about3">Project 1</h2>
+              <h2 id="about3" class="about3">Project 1</h2>
               <h2 id="about2">Project description</h2>
               <a class="contact-button" id="project-1-link" href="https://roaring-lebkuchen-3eae39.netlify.app/">Learn More</a>
             </div>
@@ -90,7 +90,7 @@
               <p class="p2p"></p>
             </div>
             <div class="project2-right">
-              <h2 id="about3">SnowSeeker</h2>
+              <h2 id="about3" class="about3">SnowSeeker</h2>
               <h2 id="about2">A SwiftUI project with detailed global ski resort information at your fingertips.</h2>
               <a class="contact-button" id="project-1-link" href="https://meruemmoon.netlify.app/#SnowSeeker">Learn More</a>
             </div>
@@ -105,7 +105,7 @@
             </div>
             <!-- any apollo mission emblem as pic -->
             <div class="project3-right">
-              <h2 id="about3">GalaxyGuide</h2>
+              <h2 id="about3" class="about3">GalaxyGuide</h2>
               <h2 id="about2">SwiftUI project in which you explore Apollo mission details and crew bios.</h2>
               <a class="contact-button" id="project-1-link" href="https://meruemmoon.netlify.app/#GalaxyGuide">Learn More</a>
             </div>
@@ -120,7 +120,7 @@
             </div>
             <!-- american flag picture -->
             <div class="project4-right">
-              <h2 id="about3">RPS</h2>
+              <h2 id="about3" class="about3">RPS</h2>
               <h2 id="about2">A web application of a simple, classic game.</h2>
               <a class="contact-button" id="project-1-link" href="https://connorhill-rockpaperscissors.netlify.app/">Live Link</a>
             </div>
@@ -135,7 +135,7 @@
               <p class="p5p"></p>
             </div>
             <div class="project5-right">
-              <h2 id="about3">GuessTheFlag</h2>
+              <h2 id="about3" class="about3">GuessTheFlag</h2>
               <h2 id="about2">A SwiftUI project in which you match flags to country names in a fun quiz format.</h2>
               <a class="contact-button" id="project-1-link" href="https://meruemmoon.netlify.app/#GuessTheFlag">Learn More</a>
             </div>
@@ -151,7 +151,7 @@
               <p class="p6p"></p>
             </div>
             <div class="project6-right">
-              <h2 id="about3">WordScramble</h2>
+              <h2 id="about3" class="about3">WordScramble</h2>
               <h2 id="about2">A SwiftUI app that allows you to test your ability to create smaller words from a given word.</h2>
               <a class="contact-button" id="project-1-link" href="https://meruemmoon.netlify.app/#WordScramble">Learn More</a>
             </div>
@@ -167,7 +167,7 @@
               <p class="p7p"></p>
             </div>
             <div class="project7-right">
-              <h2 id="about3">BucketList</h2>
+              <h2 id="about3" class="about3">BucketList</h2>
               <h2 id="about2">A SwiftUI app that lets you add personal markers on Apple Maps to bookmark places you want to visit.</h2>
               <!-- key feature: secure user authentication to access the app, mapkit, customizable location markers -->
                <!-- tools used: mvvm, mapkit, map api -->
@@ -185,7 +185,7 @@
               <p class="p8p"></p>
             </div>
             <div class="project8-right">
-              <h2 id="about3">HabitTracker</h2>
+              <h2 id="about3" class="about3">HabitTracker</h2>
               <h2 id="about2">SwiftUI app for habit tracking that helps you set and monitor goals</h2>
               <a class="contact-button" id="project-1-link" href="https://meruemmoon.netlify.app/#HabitTracker">Learn More</a>
             </div>
@@ -201,7 +201,7 @@
               <p class="p9p"></p>
             </div>
             <div class="project9-right">
-              <h2 id="about3">InstaFilter</h2>
+              <h2 id="about3" class="about3">InstaFilter</h2>
               <h2 id="about2">A SwiftUI project in which you can upload, edit and save photos with descriptions and more.</h2>
               <a class="contact-button" id="project-1-link" href="https://meruemmoon.netlify.app/#InstaFilter">Learn More</a>
             </div>
@@ -217,7 +217,7 @@
               <p class="p10p"></p>
             </div>
             <div class="project10-right">
-              <h2 id="about3">X's and O's</h2>
+              <h2 id="about3" class="about3">X's and O's</h2>
               <h2 id="about2">SwiftUI app that lets you play classic Tic Tac Toe against a friend or the computer with simple, intuitive controls and a clean interface.</h2>
               <!-- key features: play against a fiend or the computer, play against a friend locally, nice clean ui and customizable names for players -->
                <!-- tools used: multipeer connectivity, -->
@@ -253,7 +253,7 @@
               <p class="p12p"></p>
             </div>
             <div class="project12-right">
-              <h2 id="about3">Flashzilla</h2>
+              <h2 id="about3" class="about3">Flashzilla</h2>
               <h2 id="about2">A SwiftUI app designed for learning with flashcards, allowing you to create, organize, and study personalized decks of digital flashcards on your device.</h2>
               <!-- key features: customizable flashcards, prompts and answers, custom flashcards and timed excercise. -->
               <a class="contact-button" id="project-1-link" href="https://meruemmoon.netlify.app/#Flashzilla">Learn More</a>
@@ -270,7 +270,7 @@
               <p class="p13p"></p>
             </div>
             <div class="project13-right">
-              <h2 id="about3">iExpense</h2>
+              <h2 id="about3" class="about3">iExpense</h2>
               <h2 id="about2">A SwiftUI app for managing personal and business expenses, enabling users to easily track, categorize, and analyze spending.</h2>
               <!-- both personal AND business expenses can be accounted for -->
               <a class="contact-button" id="project-1-link" href="https://meruemmoon.netlify.app/#iExpense">Learn More</a>
@@ -287,7 +287,7 @@
               <p class="p14p">/p>
             </div>
             <div class="project14-right">
-              <h2 id="about3">CupcakeCorner</h2>
+              <h2 id="about3" class="about3">CupcakeCorner</h2>
               <h2 id="about2">A SwiftUI app for a cupcake store that allows customers to browse, order, and customize cupcakes from a variety of flavors.</h2>
               <a class="contact-button" id="project-1-link" href="https://meruemmoon.netlify.app/#CupcakeCorner">Learn More</a>
             </div>
@@ -303,7 +303,7 @@
               <p class="p15p"></p>
             </div>
             <div class="project15-right">
-              <h2 id="about3">BetterRest</h2>
+              <h2 id="about3" class="about3">BetterRest</h2>
               <h2 id="about2">A SwiftUI app utilizing machine learning to determine the optimal sleeping schedule for users based on their personalized data.</h2>
               <!-- machine learning, notifies user when its time to sleep, save sleep for the user  -->
                <!-- machine learning, notifications, alerts -->
@@ -321,7 +321,7 @@
               <p class="p16p"></p>
             </div>
             <div class="project16-right">
-              <h2 id="about3">WeSplit</h2>
+              <h2 id="about3" class="about3">WeSplit</h2>
               <h2 id="about2">A SwiftUI app that calculates and divides tips and payments evenly among groups of people.</h2>
               <a class="contact-button" id="project-1-link" href="https://meruemmoon.netlify.app/#WeSplit">Learn More</a>
             </div>
