--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <a id="welcome-button" class="contact-button" href="./#projects">Projects</a>
       </section>
       <section id="about" class="About-mee">
-        <h2 id="about1">ABOUT ME</h2>
+        <h2 id="about1" class="about1">ABOUT ME</h2>
         <div class="barz"></div>
         <h2 id="about2">Here's a little more information about me, what I do, and my current skills regarding programming and technology</h2> 
         <div class="about-section">
@@ -71,7 +71,7 @@
         </div>
       </section>
       <section id="projects">
-        <h2 id="about1">PROJECTS</h2>
+        <h2 id="about1" class="about1">PROJECTS</h2>
         <div class="barz"></div>
         <h2 id="about2">These are some of my projects</h2>
         <div class="project-section">
@@ -331,7 +331,7 @@
         </div>
       </section>
       <section id="contact" class="contact">
-        <h2 id="about1">CONTACT ME</h2>
+        <h2 id="about1" class="about1">CONTACT ME</h2>
         <div class="barz"></div>
         <h2 id="about2" class="contact-paragraph">Feel free to contact me below, and I will get back to you as soon as possible.</h2>
         <!-- <form class="form" method="post" action="#"> -->
