--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
       <section id="about" class="About-mee">
         <h2 id="about1" class="about1">ABOUT ME</h2>
         <div class="barz"></div>
-        <h2 id="about2">Here's a little more information about me, what I do, and my current skills regarding programming and technology</h2> 
+        <h2 id="about2" class="aboutSizer">Here's a little more information about me, what I do, and my current skills regarding programming and technology</h2> 
         <div class="about-section">
           <div class="abouts">
             <h2 id="about3" class="about3">Here I am!</h2>
-            <h2 id="about4">I'm an <strong>iOS and front end web developer</strong> building iOS apps and the front end of websites that lead to the success of the overall product. Check out some of my work in the <strong>projects</strong> section.</h2>
-            <h2 id="about5">I also like sharing content related to the stuff that I have learned over the years in <strong>iOS and web development</strong> so it can help other people of the dev community. Feel free to connect or follow me on my LinkedIn where I post useful content related to iOS development, web development, and programming in general.</h2>
-            <h2 id="about6">I'm open to <strong>job</strong> opportunities where I can contribute, learn, and grow. If you have a good opportunity that matches my skills and experience, then don't hesitate to <strong>contact</strong> me.</h2>   
+            <h2 id="about4" class="aboutSizer">I'm an <strong>iOS and front end web developer</strong> building iOS apps and the front end of websites that lead to the success of the overall product. Check out some of my work in the <strong>projects</strong> section.</h2>
+            <h2 id="about5" class="aboutSizer">I also like sharing content related to the stuff that I have learned over the years in <strong>iOS and web development</strong> so it can help other people of the dev community. Feel free to connect or follow me on my LinkedIn where I post useful content related to iOS development, web development, and programming in general.</h2>
+            <h2 id="about6" class="aboutSizer">I'm open to <strong>job</strong> opportunities where I can contribute, learn, and grow. If you have a good opportunity that matches my skills and experience, then don't hesitate to <strong>contact</strong> me.</h2>   
             <a class="about-button" href="./#contact">Contact</a>
           </div>
           <div>
@@ -73,7 +73,7 @@
       <section id="projects">
         <h2 id="about1" class="about1">PROJECTS</h2>
         <div class="barz"></div>
-        <h2 id="about2">These are some of my projects</h2>
+        <h2 id="about2" class="aboutSizer">These are some of my projects</h2>
         <div class="project-section">
           <!-- <div class="project-1-container">
             <div class="project1-left">
@@ -81,7 +81,7 @@
             </div>
             <div class="project1-right">
               <h2 id="about3" class="about3">Project 1</h2>
-              <h2 id="about2">Project description</h2>
+              <h2 id="about2" class="aboutSizer">Project description</h2>
               <a class="contact-button" id="project-1-link" href="https://roaring-lebkuchen-3eae39.netlify.app/">Learn More</a>
             </div>
           </div> -->
@@ -91,7 +91,7 @@
             </div>
             <div class="project2-right">
               <h2 id="about3" class="about3">SnowSeeker</h2>
-              <h2 id="about2">A SwiftUI project with detailed global ski resort information at your fingertips.</h2>
+              <h2 id="about2" class="aboutSizer">A SwiftUI project with detailed global ski resort information at your fingertips.</h2>
               <a class="contact-button" id="project-1-link" href="https://meruemmoon.netlify.app/#SnowSeeker">Learn More</a>
             </div>
           </div>
@@ -106,7 +106,7 @@
             <!-- any apollo mission emblem as pic -->
             <div class="project3-right">
               <h2 id="about3" class="about3">GalaxyGuide</h2>
-              <h2 id="about2">SwiftUI project in which you explore Apollo mission details and crew bios.</h2>
+              <h2 id="about2" class="aboutSizer">SwiftUI project in which you explore Apollo mission details and crew bios.</h2>
               <a class="contact-button" id="project-1-link" href="https://meruemmoon.netlify.app/#GalaxyGuide">Learn More</a>
             </div>
           </div>
@@ -121,7 +121,7 @@
             <!-- american flag picture -->
             <div class="project4-right">
               <h2 id="about3" class="about3">RPS</h2>
-              <h2 id="about2">A web application of a simple, classic game.</h2>
+              <h2 id="about2" class="aboutSizer">A web application of a simple, classic game.</h2>
               <a class="contact-button" id="project-1-link" href="https://connorhill-rockpaperscissors.netlify.app/">Live Link</a>
             </div>
           </div>
@@ -152,7 +152,7 @@
             </div>
             <div class="project6-right">
               <h2 id="about3" class="about3">WordScramble</h2>
-              <h2 id="about2">A SwiftUI app that allows you to test your ability to create smaller words from a given word.</h2>
+              <h2 id="about2" class="aboutSizer">A SwiftUI app that allows you to test your ability to create smaller words from a given word.</h2>
               <a class="contact-button" id="project-1-link" href="https://meruemmoon.netlify.app/#WordScramble">Learn More</a>
             </div>
           </div>
@@ -186,7 +186,7 @@
             </div>
             <div class="project8-right">
               <h2 id="about3" class="about3">HabitTracker</h2>
-              <h2 id="about2">SwiftUI app for habit tracking that helps you set and monitor goals</h2>
+              <h2 id="about2" class="aboutSizer">SwiftUI app for habit tracking that helps you set and monitor goals</h2>
               <a class="contact-button" id="project-1-link" href="https://meruemmoon.netlify.app/#HabitTracker">Learn More</a>
             </div>
           </div>
@@ -218,7 +218,7 @@
             </div>
             <div class="project10-right">
               <h2 id="about3" class="about3">X's and O's</h2>
-              <h2 id="about2">SwiftUI app that lets you play classic Tic Tac Toe against a friend or the computer with simple, intuitive controls and a clean interface.</h2>
+              <h2 id="about2" class="aboutSizer">SwiftUI app that lets you play classic Tic Tac Toe against a friend or the computer with simple, intuitive controls and a clean interface.</h2>
               <!-- key features: play against a fiend or the computer, play against a friend locally, nice clean ui and customizable names for players -->
                <!-- tools used: multipeer connectivity, -->
               <a class="contact-button" id="project-1-link" href="https://meruemmoon.netlify.app/#X-sandO-s">Learn More</a>
@@ -236,7 +236,7 @@
             </div>
             <div class="project11-right">
               <h2 id="about3">ToDoList</h2>
-              <h2 id="about2">An app of a classic to-do list that allows the user to create an account.</h2>
+              <h2 id="about2" class="aboutSizer">An app of a classic to-do list that allows the user to create an account.</h2>
               <!-- key features: user login and account creation,  -->
                <!-- tools used: FireBase auth, firebase -->
               <a class="contact-button" id="project-1-link" href="https://meruemmoon.netlify.app/#ToDoList">Learn More</a>
@@ -254,7 +254,7 @@
             </div>
             <div class="project12-right">
               <h2 id="about3" class="about3">Flashzilla</h2>
-              <h2 id="about2">A SwiftUI app designed for learning with flashcards, allowing you to create, organize, and study personalized decks of digital flashcards on your device.</h2>
+              <h2 id="about2" class="aboutSizer">A SwiftUI app designed for learning with flashcards, allowing you to create, organize, and study personalized decks of digital flashcards on your device.</h2>
               <!-- key features: customizable flashcards, prompts and answers, custom flashcards and timed excercise. -->
               <a class="contact-button" id="project-1-link" href="https://meruemmoon.netlify.app/#Flashzilla">Learn More</a>
             </div>
@@ -288,7 +288,7 @@
             </div>
             <div class="project14-right">
               <h2 id="about3" class="about3">CupcakeCorner</h2>
-              <h2 id="about2">A SwiftUI app for a cupcake store that allows customers to browse, order, and customize cupcakes from a variety of flavors.</h2>
+              <h2 id="about2" class="aboutSizer">A SwiftUI app for a cupcake store that allows customers to browse, order, and customize cupcakes from a variety of flavors.</h2>
               <a class="contact-button" id="project-1-link" href="https://meruemmoon.netlify.app/#CupcakeCorner">Learn More</a>
             </div>
           </div>
@@ -322,7 +322,7 @@
             </div>
             <div class="project16-right">
               <h2 id="about3" class="about3">WeSplit</h2>
-              <h2 id="about2">A SwiftUI app that calculates and divides tips and payments evenly among groups of people.</h2>
+              <h2 id="about2" class="aboutSizer">A SwiftUI app that calculates and divides tips and payments evenly among groups of people.</h2>
               <a class="contact-button" id="project-1-link" href="https://meruemmoon.netlify.app/#WeSplit">Learn More</a>
             </div>
           </div>
@@ -333,19 +333,19 @@
       <section id="contact" class="contact">
         <h2 id="about1" class="about1">CONTACT ME</h2>
         <div class="barz"></div>
-        <h2 id="about2" class="contact-paragraph">Feel free to contact me below, and I will get back to you as soon as possible.</h2>
+        <h2 id="about2" class="aboutSizer contact-paragraph">Feel free to contact me below, and I will get back to you as soon as possible.</h2>
         <!-- <form class="form" method="post" action="#"> -->
           <div class="name-entry">
             <label class="name-label center correctFont" for="name">Email:</label>
-            <h2 id="about2" class="contact-paragraph"><strong>Jamesconnorhill@gmail.com</strong></h2>
+            <h2 id="about2" class="aboutSizer contact-paragraph"><strong>Jamesconnorhill@gmail.com</strong></h2>
           </div>
           <div class="email-entry">
             <label class="email-label center correctFont" for="email">Phone Number:</label>
-            <h2 id="about2" class="contact-paragraph"><strong>+1 (812) 603-9832</strong></h2>
+            <h2 id="about2" class="aboutSizer contact-paragraph"><strong>+1 (812) 603-9832</strong></h2>
           </div>
           <div class="message-entry center">
             <label class="message-label center correctFont" for="message">LinkedIn:</label>
-            <a id="about2" class="contact-paragraph center contactLink" href="https://www.linkedin.com/in/connor-j-hill/"><strong>Message Me!</strong></a>
+            <a id="about2" class="aboutSizer contact-paragraph center contactLink" href="https://www.linkedin.com/in/connor-j-hill/"><strong>Message Me!</strong></a>
           </div>
           <!-- <button type="submit" class="submit-button">SUBMIT</button>
         </form>  -->
