--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
             </div>
             <div class="project5-right">
               <h2 id="about3" class="about3">GuessTheFlag</h2>
-              <h2 id="about2">A SwiftUI project in which you match flags to country names in a fun quiz format.</h2>
+              <h2 id="about2" class="aboutSizer">A SwiftUI project in which you match flags to country names in a fun quiz format.</h2>
               <a class="contact-button" id="project-1-link" href="https://meruemmoon.netlify.app/#GuessTheFlag">Learn More</a>
             </div>
           </div>
@@ -168,7 +168,7 @@
             </div>
             <div class="project7-right">
               <h2 id="about3" class="about3">BucketList</h2>
-              <h2 id="about2">A SwiftUI app that lets you add personal markers on Apple Maps to bookmark places you want to visit.</h2>
+              <h2 id="about2" class="aboutSizer">A SwiftUI app that lets you add personal markers on Apple Maps to bookmark places you want to visit.</h2>
               <!-- key feature: secure user authentication to access the app, mapkit, customizable location markers -->
                <!-- tools used: mvvm, mapkit, map api -->
               <a class="contact-button" id="project-1-link" href="https://meruemmoon.netlify.app/#BucketList">Learn More</a>
@@ -202,7 +202,7 @@
             </div>
             <div class="project9-right">
               <h2 id="about3" class="about3">InstaFilter</h2>
-              <h2 id="about2">A SwiftUI project in which you can upload, edit and save photos with descriptions and more.</h2>
+              <h2 id="about2" class="aboutSizer">A SwiftUI project in which you can upload, edit and save photos with descriptions and more.</h2>
               <a class="contact-button" id="project-1-link" href="https://meruemmoon.netlify.app/#InstaFilter">Learn More</a>
             </div>
           </div>
@@ -271,7 +271,7 @@
             </div>
             <div class="project13-right">
               <h2 id="about3" class="about3">iExpense</h2>
-              <h2 id="about2">A SwiftUI app for managing personal and business expenses, enabling users to easily track, categorize, and analyze spending.</h2>
+              <h2 id="about2" class="aboutSizer">A SwiftUI app for managing personal and business expenses, enabling users to easily track, categorize, and analyze spending.</h2>
               <!-- both personal AND business expenses can be accounted for -->
               <a class="contact-button" id="project-1-link" href="https://meruemmoon.netlify.app/#iExpense">Learn More</a>
             </div>
@@ -304,7 +304,7 @@
             </div>
             <div class="project15-right">
               <h2 id="about3" class="about3">BetterRest</h2>
-              <h2 id="about2">A SwiftUI app utilizing machine learning to determine the optimal sleeping schedule for users based on their personalized data.</h2>
+              <h2 id="about2" class="aboutSizer">A SwiftUI app utilizing machine learning to determine the optimal sleeping schedule for users based on their personalized data.</h2>
               <!-- machine learning, notifies user when its time to sleep, save sleep for the user  -->
                <!-- machine learning, notifications, alerts -->
               <a class="contact-button" id="project-1-link" href="https://meruemmoon.netlify.app/#BetterRest">Learn More</a>
