--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </header>
       </div>
       <section id="welcome-section" class="Welcome">
-        <h1 id="welc-about1">Hey, I'm Connor Hill</h1>
+        <h1 id="welc-about1" class="welc-about1">Hey, I'm Connor Hill</h1>
         <h2 id="welc-about" class="welc-about">An iOS and front end focused software developer building iOS apps and the front end of websites that lead to the success of the overall product.</h2>   
         <a id="welcome-button" class="contact-button" href="./#projects">Projects</a>
       </section>
