--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
         <h2 id="about1" class="about1">ABOUT ME</h2>
         <div class="barz"></div>
         <h2 id="about2" class="aboutSizer">Here's a little more information about me, what I do, and my current skills regarding programming and technology</h2> 
+        <div class="aboutContainer">
         <div class="about-section">
           <div class="abouts">
             <h2 id="about3" class="about3">Here I am!</h2>
@@ -46,6 +47,7 @@
             <a class="about-button" href="./#contact">Contact</a>
           </div>
           <div>
+            </div>
             <h2 id="about3" class="about3">My skills</h2>
             <div class="skills-container">
             <div class="skills">
