--- a/index.html
+++ b/index.html
@@ -46,7 +46,6 @@
             <h2 id="about6" class="aboutSizer">I'm open to <strong>job</strong> opportunities where I can contribute, learn, and grow. If you have a good opportunity that matches my skills and experience, then don't hesitate to <strong>contact</strong> me.</h2>   
             <a class="about-button" href="./#contact">Contact</a>
           </div>
-          <div>
             </div>
             <h2 id="about3" class="about3">My skills</h2>
             <div class="skills-container">
@@ -71,6 +70,7 @@
             </div>
           </div>
         </div>
+      </div>
       </section>
       <section id="projects">
         <h2 id="about1" class="about1">PROJECTS</h2>
