--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
         <div class="about-section">
           <div class="abouts">
             <h2 id="about3" class="about3">Here I am!</h2>
-            <h2 id="about4" class="aboutSizer">I'm an <strong>iOS and front end web developer</strong> building iOS apps and the front end of websites that lead to the success of the overall product. Check out some of my work in the <strong>projects</strong> section.</h2>
-            <h2 id="about5" class="aboutSizer">I also like sharing content related to the stuff that I have learned over the years in <strong>iOS and web development</strong> so it can help other people of the dev community. Feel free to connect or follow me on my LinkedIn where I post useful content related to iOS development, web development, and programming in general.</h2>
-            <h2 id="about6" class="aboutSizer">I'm open to <strong>job</strong> opportunities where I can contribute, learn, and grow. If you have a good opportunity that matches my skills and experience, then don't hesitate to <strong>contact</strong> me.</h2>   
+            <h2 id="about4" class="aboutSizer2">I'm an <strong>iOS and front end web developer</strong> building iOS apps and the front end of websites that lead to the success of the overall product. Check out some of my work in the <strong>projects</strong> section.</h2>
+            <h2 id="about5" class="aboutSizer2">I also like sharing content related to the stuff that I have learned over the years in <strong>iOS and web development</strong> so it can help other people of the dev community. Feel free to connect or follow me on my LinkedIn where I post useful content related to iOS development, web development, and programming in general.</h2>
+            <h2 id="about6" class="aboutSizer2">I'm open to <strong>job</strong> opportunities where I can contribute, learn, and grow. If you have a good opportunity that matches my skills and experience, then don't hesitate to <strong>contact</strong> me.</h2>   
             <a class="about-button" href="./#contact">Contact</a>
           </div>
           <div>
