--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <section id="about" class="About-mee">
         <h2 id="about1" class="about1">ABOUT ME</h2>
         <div class="barz"></div>
-        <h2 id="about2" class="aboutSizer">Here's a little more information about me, what I do, and my current skills regarding programming and technology</h2> 
+        <h2 id="about2" class="aboutSizer">Here's a little more information about me, what I do, and my current skills regarding programming and technology!</h2> 
         <div class="aboutContainer">
         <div class="about-section">
           <div class="abouts">
@@ -75,7 +75,7 @@
       <section id="projects">
         <h2 id="about1" class="about1">PROJECTS</h2>
         <div class="barz"></div>
-        <h2 id="about2" class="aboutSizer">These are some of my projects</h2>
+        <h2 id="about2" class="aboutSizer">These are some of my projects!</h2>
         <div class="project-section">
           <!-- <div class="project-1-container">
             <div class="project1-left">
@@ -188,7 +188,7 @@
             </div>
             <div class="project8-right">
               <h2 id="about3" class="about3">HabitTracker</h2>
-              <h2 id="about2" class="aboutSizer">SwiftUI app for habit tracking that helps you set and monitor goals</h2>
+              <h2 id="about2" class="aboutSizer">SwiftUI app for habit tracking that helps you set and monitor goals.</h2>
               <a class="contact-button" id="project-1-link" href="https://meruemmoon.netlify.app/#HabitTracker">Learn More</a>
             </div>
           </div>
@@ -335,7 +335,7 @@
       <section id="contact" class="contact">
         <h2 id="about1" class="about1">CONTACT ME</h2>
         <div class="barz"></div>
-        <h2 id="about2" class="aboutSizer contact-paragraph">Feel free to contact me below, and I will get back to you as soon as possible.</h2>
+        <h2 id="about2" class="aboutSizer contact-paragraph">Feel free to contact me below, and I will get back to you as soon as possible!</h2>
         <!-- <form class="form" method="post" action="#"> -->
           <div class="name-entry">
             <label class="name-label center correctFont" for="name">Email:</label>
