--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
           <!-- next project -->
           <div class="project-14-container">
             <div class="project14-left">
-              <p class="p14p">/p>
+              <p class="p14p"></p>
             </div>
             <div class="project14-right">
               <h2 id="about3" class="about3">CupcakeCorner</h2>
